--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Emp. Manager  is a CLI application to view and manage the departments, roles, and employees",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node app.ts"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
   },
   "homepage": "https://github.com/bhagatabhijeet/empmanager#readme",
   "dependencies": {
+    "@types/node": "^14.11.2",
+    "boxen": "^4.2.0",
     "cfonts": "^2.8.6",
     "console.table": "^0.10.0",
     "inquirer": "^7.3.3",
