--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "boxen": "^4.2.0",
     "cfonts": "^2.8.6",
     "console.table": "^0.10.0",
+    "dotenv": "^8.2.0",
     "inquirer": "^7.3.3",
     "mysql": "^2.18.1"
   },
