--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "boxen": "^4.2.0",
     "cfonts": "^2.8.6",
+    "chalk": "^4.1.0",
     "console.table": "^0.10.0",
     "dotenv": "^8.2.0",
     "inquirer": "^7.3.3",
